Avoid panics from recursive rename operations. Not a perfect patch but good enough for now.

PR:		kern/159418
Submitted by:	Gleb Kurtsou
Reviewed by:	kib
MFC after:	1 month


git-svn-id: svn+ssh://svn.freebsd.org/base/head@227822 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f